fixed align-items

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: flex-center;
+  align-items: flex-start;
   overflow: hidden; 
 }
 
